--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.7",
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.7",
     "morgan": "^1.9.0",
     "multer": "^1.3.1"
